--- a/app/views/site/index.html.slim
+++ b/app/views/site/index.html.slim
@@ -1,5 +1,5 @@
 p.welcome
-  | welcome #{@current_user.email}
+  | welcome #{@current_user.first_name}
 
 / p.links
 /   => link_to "all products", product_url
