change associations and create join table

--- a/app/views/lists/_form.html.slim
+++ b/app/views/lists/_form.html.slim
@@ -2,7 +2,7 @@ main.container role="main"
   / .row
   .col-md-5
 
-    = form_for @list, html: { id: "reviewform", class: "form-horizontal"} do |f|
+    = form_for @list, html: { id: "listform", class: "form-horizontal"} do |f|
       fieldset
 
         legend My List
