--- a/app/views/gear/edit.html.slim
+++ b/app/views/gear/edit.html.slim
@@ -21,7 +21,9 @@
           = f.collection_check_boxes :product_ids, @products, :id, :product_name do |b|
             - product = b.instance_variable_get(:@object)
             tr.product_item
-              td.td_6 = b.check_box(class: "product_box", :"data-weight" => product.product_weight, :"data-calories" => product.product_calories)
+              td.td_6 = b.check_box
+
+              / td.td_6 = b.check_box(class: "product_box", :"data-weight" => product.product_weight, :"data-calories" => product.product_calories)
               td.td_1 = product.product_name
               td.td_2 = product.product_weight
               td.td_3 = product.product_calories
