--- a/app/views/lists/_form.html.slim
+++ b/app/views/lists/_form.html.slim
@@ -11,7 +11,7 @@ main.container role="main"
 
         .form-group
           = f.label :list_name, class: "input-group input-group-lg"
-          = f.number_field :list_name, class: "form-control" ,placeholder: "List name."
+          = f.text_field :list_name, class: "form-control" ,placeholder: "List name."
 
         .form-group
           = f.submit class: "btn btn-success"
