--- a/app/views/lists/edit.html.slim
+++ b/app/views/lists/edit.html.slim
@@ -1,37 +1,12 @@
-.container
-  = form_for @current_user, url: list_form_url, method: :patch do |f|
+p.links
+  /   => link_to "all products", products_url
+  /   ' |
+  /   => link_to "new product", product_new_url
+  /   ' |
+  => link_to "show product", product_url(@product)
+  ' |
 
-    div class="All_Products_list"
-      h3.header Select my gear
-      table.table.table-bordered
-        / p Click on the checkboxes to select your gear
-        / table class="table table-bordered"
-        thead
-          tr
-            th.th_6 = "Select"
-            th.th_1 = "Product Name"
-            th.th_2 = "brand"
-            th.th_3 = "category"
-            th.th_4 = "sub category"
-            th.th_5 = "Product Weight (in grams)"
-            th.th_6 = "Product Calories (in calories)"
-            th.th_7 = "image"
-        tfoot
-          tr
-            th.th_8 = "Tally My Gear - Totals"
-            th#weight.th_5 = "total weight"
-            th#calories.th_6 = "total calories"
-        tbody
-          = f.collection_check_boxes :product_ids, @products, :id, :product_name do |b|
-            - product = b.instance_variable_get(:@object)
-            tr.product_item
-              td.td_8 = b.check_box(class: "product_box", :"data-weight" => product.product_weight, :"data-calories" => product.product_calories)
-              td.td_1 = product.product_name
-              td.td_2 = product.brand
-              td.td_3 = product.category
-              td.td_4 = product.sub_category
-              td.td_5 = product.product_weight
-              td.td_6 = product.product_calories
-              td.td_7 = "image"
-      = f.submit "Save my list", class:"btn btn-warning"
+  = link_to "delete", product_url(@product), method: :delete,
+    confirm: "are you sure you want to delete the product ' #{@product.product_name} '?"
 
+== render partial: 'form'
