--- a/app/views/lists/show.html.slim
+++ b/app/views/lists/show.html.slim
@@ -1,1 +1,30 @@
 <p> list of list names go here </p>
+
+.container
+  h3.header Display item
+  table class="table table-bordered"
+    thead
+      tr
+        th.th_1 Product name
+        th.th_2 Brand
+        th.th_3 Category
+        th.th_4 Sub category
+        th.th_5 Product Weight (in grams)
+        th.th_6 Product Calories (in calories)
+        th.th_7 image
+        th.th_8 Action
+        th.th_8
+
+    tbody
+      / - for item in @products
+      tr
+        td.td_1 => @product.product_name
+        td.td_2 => @product.brand
+        td.td_3 => @product.category
+        td.td_4 => @product.sub_category
+        td.td_5 => @product.product_weight
+        td.td_6 => @product.product_calories
+        td.td_7
+        td.td_8 = link_to "edit", edit_product_url(@product)
+        td.td_8 = link_to "delete", product_url(@product), method: :delete,
+          confirm: "are you sure you want to delete ' #{@product.product_name} ' ?"
